# PatchPaw

./: .gitignore  DESIGN.md  HANDOFF.md  README.md  TODO.md  config-selftest.yaml  config.yaml  pyproject.toml  tasks-p1-smoke.txt  tasks.txt
.patchpaw/: context.md  test-cmd
openpaw/: __init__.py  cli.py  config.py  controller.py  diff_validator.py  llm_adapter.py  patch_applier.py  prompt_builder.py  session_manager.py  test_runner.py
openpaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
patchpaw/: __init__.py  cli.py  controller.py  diff_validator.py  llm_adapter.py  patch_applier.py  prompt_builder.py  repository_reader.py  runner.py  test_runner.py  utils.py
scripts/: patchpaw-run.sh
tests/: test_controller.py  test_openpaw.py  test_patchpaw.py  test_runner_subcommand.py  test_utils.py
